# canary_180m_flash_ru

./: .envdefault  README.md  RUN.md  canary_180m_flash_config.yaml  main.py  nemo_to_conf.py  postprocess_dataset.py  pyproject.toml  russian_finetune.yaml  train.py
callbacks/: wer_metrics_callback.py  wermetrics_callback.py
canary_flash_tokenizers/de/: tokenizer.model  tokenizer.vocab  vocab.txt
canary_flash_tokenizers/en/: tokenizer.model  tokenizer.vocab  vocab.txt
canary_flash_tokenizers/es/: tokenizer.model  tokenizer.vocab  vocab.txt
canary_flash_tokenizers/fr/: tokenizer.model  tokenizer.vocab  vocab.txt
canary_flash_tokenizers/ru/: tokenizer.model  tokenizer.vocab  vocab.txt
canary_flash_tokenizers/spl_tokens/: tokenizer.model
config/: base.yaml  canary-180m-flash-finetune.yaml  russian_finetune_base.yaml
configs/: base.yaml  canary-180m-flash-finetune-ru.yaml  canary-180m-flash-finetune-ru_oomptimizer.yaml
dataset_downloader/: download_webdataset.py  dto.py
entrypoint/: config.py
metrics/: no_punct_wer.py
scripts/: corpus_creator.py  estimate_duration_bins_2d.py  nemo_to_conf.py  oomptimizer.py  postprocess_dataset.py  pretokenize.py  speech_to_text_aed.py
scripts/dataset_loaders/: common_voice.py  compare_datasets.py  rulibrispeech.py  utils.py
scripts/datasets/: __init__.py  common_voice_21.py  compare_datasets.py  rulibrispeech.py
tests/: test_normalizer.py
tokenizers_ru/tokenizer_spe_bpe_v1024/: tokenizer.model  tokenizer.vocab
tokenizers_spl/: tokenizer.model  tokenizer.vocab  train_text.txt
utils/: normalizer_text.py
