[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-nemo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "torch==2.5.1+cu124",
    "torchaudio==2.5.1+cu124",
    "nemo-toolkit[all]>=2.2.0",
    "pyaudio>=0.2.14",
]

[tool.uv.sources]
torch = { index = "pytorch-all"}
torchaudio = { index = "pytorch-all"}


[[tool.uv.index]]
name = "pytorch-all"
url = "https://download.pytorch.org/whl/"
explicit = true


[tool.setuptools]
packages = [
    "models",
    "corpus",
    "configs",
    "datasets",
    "callbacks",
    "entrypoint",
    "dataset_downloader",
    "canary_flash_tokenizers",
    "utils"
]